# blackbeard-os

./: README.md
BlackbeardOS/SDDM/: Main.qml  README.md  theme.conf
BlackbeardOS/SDDM/Components/: Input.qml
BlackbeardOS/boot/: atlas
SDDM/BlackbeardOS/: Main.qml
SDDM/BlackbeardOS/Components/: Clock.qml  LoginForm.qml
blackbeard-os/boot/: README.md
blackbeard-os/boot/blackbeard-live/: build.sh  packages.x86_64  pacman.conf  profiledef.sh
blackbeard-os/boot/blackbeard-live/syslinux/: syslinux.cfg
blackbeard-os/boot/installer/: Cargo.toml
blackbeard-os/boot/installer/src/: config.rs  main.rs
blackbeard-os/boot/installer/src/cli/: mod.rs
blackbeard-os/boot/installer/src/core/: bootloader.rs  disk.rs  file_ops.rs  install_config.rs  install_steps.rs  installer.rs  mod.rs  network.rs  system_config.rs
blackbeard-os/boot/installer/src/core/install/: install_config.rs  installer.rs  mod.rs
blackbeard-os/docs/: README.md
blackbeard-os/docs/guides/build-custom-kernel-for-OPi4/: README.md
blackbeard-os/drivers/LCD35/: README.md
blackbeard-os/drivers/LCD35/src/: LCD35-install
blackbeard-os/drivers/docs/OPi/: example-blink-led.py
blackbeard-os/os/: .automated_script.sh  README.md
blackbeard-os/os/2404-full/: mkblackbeardiso
blackbeard-os/sddm-blackbeard-theme/: theme.conf
blackbeard-os/src/: README.md
blackbeard-os/src/installer/: Cargo.toml
blackbeard-os/src/scripts/: .automated_script.sh
blackbeard-os/themes/: README.md
blackbeard-os/themes/blackbeardos-plymouth-theme/: blackbeardos.plymouth  linux-penguin.plymouth
(+87 files in other folders)
