[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gtk4 = "0.5"
#gdk4 = "0.5"
#glib = "0.15"

nix = "0.23.0"
sys_mount = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
